<resources>
    <string name="app_name">Retrospect</string>
    <string name="home">Home</string>
    <string name="todo_list">ToDo-Liste</string>
    <string name="timer">Timer</string>
    <string name="games">Games</string>
    <string name="settings">Einstellungen</string>
    <string name="name">Name</string>
    <string name="todo">ToDo</string>
    <string name="time">00:00:00</string>
    <string name="hours">Stunden</string>
    <string name="minutes">Minuten</string>
    <string name="seconds">Sekunden</string>
    <string name="spacer">:</string>
    <string name="add_todo">ToDo hinzufügen</string>
    <string name="add_timer">Timer hinzufügen</string>
    <string name="notification_allow">Zugriff auf Nortifications erlauben</string>
    <string name="notification_switch">Benachrichtigungen anzeigen</string>
    <string name="clock_switch">Uhrzeit anzeigen</string>
    <string name="todo_switch">ToDo-Liste anzeigen</string>
    <string name="timer_switch">Timer anzeigen</string>
    <string name="temp_switch">Temperatur anzeigen</string>
    <string name="effect_switch">Visuelle Effekte anzeigen</string>
    <string name="lighting_switch">Beleuchtung anschalten</string>
    <string name="change_color">Farbe ändern</string>
    <string name="connect">Verbinden</string>
    <string name="snake">Snake</string>
    <string name="pong">Pong</string>

</resources>
